base/fow-backend-for-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fow-backend-for-frontend
  name: fow-backend-for-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fow-backend-for-frontend
  template:
    metadata:
      labels:
        app: fow-backend-for-frontend
    spec:
      containers:
        - name: fow-backend-for-frontend
          ports:
            - containerPort: 80
          image: fow-backend-for-frontend:1234
