base/fow-backend-for-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fow-backend-for-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fow-backend-for-frontend
  type: ClusterIP
