base/fow-backend-for-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fow-backend-for-frontend
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: fow-backend-for-frontend
                port:
                  number: 80
